--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,13 @@
+/* Google fonts import */
+. @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
+
 /* Asterisk wildcard selector to override default styles added by the browser */
 * {
     padding: 0;
-    margin: 0; 
+    margin: 0;
     box-sizing: border-box;
-} 
+}
+
 /* General styles */
 body {
     min-height: 100vh;
@@ -12,18 +16,21 @@ body {
     /* generic project styles */
     color: #3a3a3a;
 
-} 
-/* header */ 
+}
+
+/* header */
 header {
     background-color: lightcoral;
 }
-/* main content */ 
+
+/* main content */
 main {
     background-color: lightblue;
-  /* make main element take up any surplus space to push footer down */   
-    flex: 1 0 auto; 
+    /* make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
 }
-/* footer */ 
+
+/* footer */
 footer {
     background-color: orange;
 }
