--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,26 @@ display: block;
 .nav-toggle-label {
     font-size: 2rem;
 }
+/* media query: tablets and larger (768px and up) */
+@media screen and (min-width: 768px) {
+    /* header */
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem;
+    }
+    #menu {
+        display: flex;
+    }
+    #menu > li {
+        padding-left: 1rem;
+    }
+    .nav-toggle-label {
+        display: none;
+    }
+}
 
 /* main content */
 main {
@@ -82,7 +102,7 @@ main {
     /* make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
-    
+
 }
 
 /* footer */
