--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ h1 {
 #menu > li {
     margin-bottom: 1em;
 }
-.active{
+.active {
     border-bottom: 1px solid #3a3a3a;
 }
 /* Nav bar styles with drop down toggle*/
@@ -75,9 +75,18 @@ display: block;
 .nav-toggle-label {
     font-size: 2rem;
 }
+
+/* main content */
+main {
+    background-color: lightblue;
+    /* make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
+    margin-top: 47px;
+
+}
 /* media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
-    /* header */
+    /* Header */
     nav {
         display: block;
         position: relative;
@@ -94,15 +103,17 @@ display: block;
     .nav-toggle-label {
         display: none;
     }
-}
+    #logo {
 
-/* main content */
-main {
-    background-color: lightblue;
-    /* make main element take up any surplus space to push footer down */
-    flex: 1 0 auto;
-    margin-top: 47px;
-
+        font-size: 280%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
+    /* main content */
+    main {
+        /* push main down to accomodate larger header*/
+        margin-top: 79px;
+    }
 }
 
 /* footer */
