--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,12 @@ main {
         /* push main down to accomodate larger header*/
         margin-top: 79px;
     }
+    /* Menu underline on hover */
+    @media screen and (min-width: 992px) {
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    } 
+    }
 
 
 /* footer */
