footer styling applied

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,8 +82,22 @@ main {
     /* make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
-
 }
+
+/* footer */
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
+    }
+
 /* media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
     /* Header */
@@ -120,9 +134,3 @@ main {
         border-bottom: 1px solid #3a3a3a;
     } 
     }
-
-
-/* footer */
-footer {
-    background-color: orange;
-}
