--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,12 +78,16 @@ display: block;
 }
 /* main content */
 main {
-    background-color: lightblue;
     /* make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
 }
-
+/* Hero section */
+#hero {
+    height: 600px;
+    width: 100%; 
+    background: url("../images/hero-image.webp") no-repeat center center/cover; /* / between posittion and size here */
+}
 /* footer */
 #social-networks {
     text-align: center;
