--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,26 +109,23 @@ main {
 
 #reasons {
     width: 90%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 20px auto;
 }
-#resons > h2 {
+#reasons > h2 {
     margin-bottom: 20px;
     font-size: 280%;
     text-align: center;
 }
-#benefits-physical > div, #benefits-mental > div {
+#benefits-physical > div, 
+#benefits-mental > div {
     margin-bottom: 20px;
     line-height: 20px;
 } 
-/* all paragraphs within the benfits */
-p {
-    padding-right: 20px;
-    padding-left: 20px;
+
+#benefits p {
+    padding: 0 20px;
 }
-hr {
+#benefits hr {
    border-top: 1px solid #3a3a3a;
    margin: 5px 0; 
 }
