moved immage to be in the center when using on larger screens - not well understood

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,9 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -39,6 +41,7 @@ header {
 
 
 }
+
 header a {
     text-decoration: none;
     color: inherit;
@@ -50,12 +53,14 @@ header a {
     font-size: 110%;
 }
 
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
 }
+
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+
 /* Nav bar styles with drop down toggle*/
 nav {
     position: absolute;
@@ -67,27 +72,33 @@ nav {
     display: none;
     top: 100%;
 }
+
 /* nav toggle */
 #nav-toggle:checked~nav {
-display: block;
+    display: block;
 }
+
 #nav-toggle {
     display: none;
 }
+
 .nav-toggle-label {
     font-size: 2rem;
 }
+
 /* main content */
 main {
     /* make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
 }
+
 /* Hero section */
 #hero {
     height: 600px;
-    width: 100%; 
-    background: url("../images/hero-image.webp") no-repeat center center/cover; /* "/" between posittion and size here */
+    width: 100%;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
+    /* "/" between posittion and size here */
     position: relative;
 }
 
@@ -103,7 +114,8 @@ main {
     padding-left: 10px;
 }
 
-#cover-text > h2, #cover-text > h3 {
+#cover-text>h2,
+#cover-text>h3 {
     color: #ffffff;
 }
 
@@ -111,27 +123,31 @@ main {
     width: 90%;
     margin: 20px auto;
 }
-#reasons > h2 {
+
+#reasons h2 {
     margin-bottom: 20px;
     font-size: 280%;
     text-align: center;
 }
-#benefits-physical > div, 
-#benefits-mental > div {
+
+#benefits-physical>div,
+#benefits-mental>div {
     margin-bottom: 20px;
     line-height: 20px;
-} 
+}
 
 #benefits p {
     padding: 0 20px;
 }
+
 #benefits hr {
-   border-top: 1px solid #3a3a3a;
-   margin: 5px 0; 
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
 }
+
 /* circle benifits image */
 #circle-cover-bg {
-    background: url(../images/reasons-image.webp) no-repeat top center / cover ;
+    background: url('../images/reasons-image.webp') no-repeat top center / cover;
     height: 90vw;
     width: 90vw;
     margin-bottom: 20px;
@@ -139,9 +155,10 @@ main {
     max-width: 300px;
     max-height: 300px;
 }
+
 #benefits-image {
     display: flex;
-    align-self: center;
+    align-items: center;
     justify-content: center;
 }
 
@@ -153,11 +170,12 @@ main {
     justify-content: space-evenly;
     list-style-type: none;
 }
+
 #social-networks i {
     font-size: 160%;
     padding: 5%;
     color: #3a3a3a;
-    }
+}
 
 /* media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
@@ -170,34 +188,94 @@ main {
         width: fit-content;
         padding-right: 1rem;
     }
+
     #menu {
         display: flex;
     }
-    #menu > li {
+
+    #menu>li {
         padding-left: 1rem;
     }
+
     .nav-toggle-label {
         display: none;
     }
+
     #logo {
 
         font-size: 280%;
         line-height: 75px;
         margin: 0 0.5rem;
     }
+
     /* main content */
     main {
         /* push main down to accomodate larger header*/
         margin-top: 79px;
     }
+
     /* Hero */
     #cover-text {
         width: 300px;
         right: 50px;
     }
+
+    /* Reasons section*/
+    #benefits-physical,
+    #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    #benefits-physical>div,
+    #benefits-mental>div {
+        width: 75%;
+    }
+
+    #benefits-mental>div {
+        text-align: end;
+        align-self: flex-end;
+    }
+
 }
-    /* Menu underline on hover */
-    @media screen and (min-width: 992px) {
+
+/* Large devices (laptops and desktops, 992px and up) */
+
+@media screen and (min-width: 992px) {
+
     #menu a:hover {
+
         border-bottom: 1px solid #3a3a3a;
-    } 
+
+    }
+
+}
+
+/* media query: large screens (1200px and up) */
+@media screen and (min-width: 1200px) {
+    #benefits {
+        display: flex;
+        flex-direction: row;
+    }
+
+    #benefits>div {
+        flex: 1;
+    }
+
+    #benefits-image {
+        order: 0;
+    }
+
+    #benefits-mental {
+        order: 1;
+    }
+
+    #benefits-mental>div {
+        align-self: flex-start;
+    }
+
+    #benefits-physical>div {
+        align-self: flex-end;
+    }
+}
