--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,6 +161,26 @@ main {
     align-items: center;
     justify-content: center;
 }
+#times {
+    background: url('../images/dublin-city.webp') no-repeat center / cover;
+    display: flex;
+    flex-wrap: wrap;
+}
+#times > div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    padding: 15px;
+    text-align: center;
+    /* this will not wrap on screens of less than 400px wide. Each div will expand to fill the available space on it's row */
+    flex-basis: 200px;
+    flex-grow: 1;
+    /* creates grid of meetup times divs ove the background inage */
+    border: 2px solid white;
+}
+#times h3 {
+    /* override the hearing colour set in general styles */
+    color: #fafafa;
+}
 
 /* footer */
 #social-networks {
